# oauth-cli

./: .env.template  Cargo.toml  Readme.md  build.rs
src/: cli.rs  close.html  commands.rs  main.rs
src/commands/: auth.rs  completions.rs
