[package]
name = "oauth-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
dirs = "5.0.1"
keyring = "3.3.0"  
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["blocking", "json", "rustls-tls"], default-features: false }
serde_json = "1.0.128"
tiny_http = "0.12.0"
webbrowser = "1.0.2"
whoami = "1.5.2"

[build-dependencies]
dotenv = "0.15.0"
itertools = "0.13.0"
oauth2 = "4.4.2"
url = "2.5.2"

[features]
linux = ["keyring/linux-native"]
windows = ["keyring/windows-native"]
apple = ["keyring/apple-native"]
